Tunable buildings now correctly reset their "on" values when importing a save with none on
Village production now gets recalculated immediately when importing, so you don't get a few ticks of old production values
Tabs will now be hidden when importing a save if they should be
____

Fixed workshop upgrades not being re-locked upon reset
Minor UI tweaks

v 0.9.6.6 (16 sep)

Time to cap fix by xranti
Rotary Kiln

v 0.9.5.5 (15 sep)

Improved performance of buttons/resource rendering (38 ms per tick)
Gather/refine buttons will display animation and not cause horrible lags anymore
Some effects will now have title and be hidden if require specific resources (e.g. barn effects)

v 0.9.5.4 (14 sep)

Fixed Reactor issues

v 0.9.5.3 (14 sep)

New buttons/tooltips for workshop
Least profficient worker will be selected when unassigning job

v 0.9.5.2 (10 sep)

Fixed tooltips for religion tab
Fixed tooltip position for smaller resolutions
Fixed tooltips and styling for gather / refine buttons

Robotics

Enriched Uranium
Oil Refinery
Steel Plants

v 0.9.4.1 (7 sep)

New tooltips for science tab (with ETA)

v 0.9.4.0 (4 sep)

Bonfire is now replaced with V2 (Old bonfire still accessible, but hidden)

> gamePage.bonfireTab.visible = true;

Added ETA in the building tooltips
Fixed iron incorrectly getting double bonus from sw/magneto
Fixed Smelter/Calciner having higher SW bonus compared to other resources

v 0.9.3.9 (2 sep)

Uranium consumption will no longer scale with reactors and magnetos (sic)
Village job buttons will display more accurate tooltips
"Clear jobs" button will finally display confirmation message
Player will be able to open Village tab even if there are no houses (thanks Duke for fixing it)

v 0.9.3.8 (14 aug)

Slightly nerfed steamworks/magneto synergy
Magnetos will no longer provide a bonus to the oil production
Fixed HoD
Fixed Reactors not consuming uranium correctly
Reactors will now benefit Smelters and Caliceners in the same way as magnetos