@@ -11,6 +11,7 @@ ____
 
 Fixed workshop upgrades not being re-locked upon reset
 Minor UI tweaks
+Price will be marked with '*' if you need to expand your resource limit
 
 v 0.9.6.6 (16 sep)
 
